--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/difflib": "^0.2.7",
     "cheerio": "^1.0.0",
+    "difflib": "^0.2.4",
     "discord.js": "^14.16.3"
   },
   "scripts": {
